--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,10 +26,10 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku run -a zipnodes flask db upgrade
-    - name: DB Seed Undo 
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku run -a zipnodes flask seed undo
+#     - name: DB Seed Undo 
+#       env:
+#         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+#       run: heroku run -a zipnodes flask seed undo
     - name: DB Seed All
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
